--- a/IMAQdxCamera/blacs_tab.ui
+++ b/IMAQdxCamera/blacs_tab.ui
@@ -13,7 +13,100 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <layout class="QHBoxLayout" name="horizontalLayout_2">
+   <property name="leftMargin">
+    <number>6</number>
+   </property>
+   <property name="topMargin">
+    <number>6</number>
+   </property>
+   <property name="rightMargin">
+    <number>6</number>
+   </property>
+   <property name="bottomMargin">
+    <number>6</number>
+   </property>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QPushButton" name="pushButton_snap">
+         <property name="toolTip">
+          <string>Take a single image</string>
+         </property>
+         <property name="text">
+          <string>Snap</string>
+         </property>
+         <property name="icon">
+          <iconset resource="../../../clones/qtutils/qtutils/icons/icons.qrc">
+           <normaloff>:/qtutils/fugue/control-stop.png</normaloff>:/qtutils/fugue/control-stop.png</iconset>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton_acquire">
+         <property name="toolTip">
+          <string>Acquire images continuously</string>
+         </property>
+         <property name="text">
+          <string>Acquire</string>
+         </property>
+         <property name="icon">
+          <iconset resource="../../../clones/qtutils/qtutils/icons/icons.qrc">
+           <normaloff>:/qtutils/fugue/control.png</normaloff>:/qtutils/fugue/control.png</iconset>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton_stop">
+         <property name="toolTip">
+          <string>Stop acquiring images</string>
+         </property>
+         <property name="text">
+          <string>Stop</string>
+         </property>
+         <property name="icon">
+          <iconset resource="../../../clones/qtutils/qtutils/icons/icons.qrc">
+           <normaloff>:/qtutils/fugue/control-stop-square.png</normaloff>:/qtutils/fugue/control-stop-square.png</iconset>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton_attributes">
+         <property name="toolTip">
+          <string>View IMAQdx attributes</string>
+         </property>
+         <property name="text">
+          <string>Attributes</string>
+         </property>
+         <property name="icon">
+          <iconset resource="../../../clones/qtutils/qtutils/icons/icons.qrc">
+           <normaloff>:/qtutils/fugue/table-export.png</normaloff>:/qtutils/fugue/table-export.png</iconset>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="verticalSpacer">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </item>
+    </layout>
+   </item>
+  </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../../../clones/qtutils/qtutils/icons/icons.qrc"/>
+ </resources>
  <connections/>
 </ui>
