IMAQdxCamera: BLACS tab complete.

--- a/IMAQdxCamera/attributes_dialog.ui
+++ b/IMAQdxCamera/attributes_dialog.ui
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
- <widget class="QWidget" name="Form">
+ <class>dialog</class>
+ <widget class="QDialog" name="dialog">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>608</width>
+    <height>613</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="../../../clones/qtutils/qtutils/icons/icons.qrc">
+    <normaloff>:/qtutils/fugue/table-import.png</normaloff>:/qtutils/fugue/table-import.png</iconset>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>These are the current attributes of the camera. To modify them, copy this dictionary into your connection table, modify it as desired and set it as the 'imaqdx_attributes' keyword argument to the IMAQdxCamera class. You will need to recompile the connection table for it to take effect.</string>
+      <string>These are the current attributes of the camera. To modify them, copy this dictionary into your connection table, modify it as desired and set it as the 'imaqdx_attributes' keyword argument to the IMAQdxCamera class. You will need to recompile the connection table for it to take effect. Any attributes not set in the connection table will not be modified by labscript - they will remain as set in NI MAX.</string>
      </property>
      <property name="wordWrap">
       <bool>true</bool>
@@ -25,10 +29,75 @@
     </widget>
    </item>
    <item>
-    <widget class="QPlainTextEdit" name="plainTextEdit"/>
+    <widget class="QPlainTextEdit" name="plainTextEdit">
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <property name="topMargin">
+      <number>10</number>
+     </property>
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_copy">
+       <property name="text">
+        <string>Copy to clipboard</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../../../clones/qtutils/qtutils/icons/icons.qrc">
+         <normaloff>:/qtutils/fugue/clipboard--arrow.png</normaloff>:/qtutils/fugue/clipboard--arrow.png</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_2">
+       <property name="text">
+        <string>Close</string>
+       </property>
+       <property name="icon">
+        <iconset theme="cancel">
+         <normaloff>.</normaloff>.</iconset>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
- <resources/>
- <connections/>
+ <resources>
+  <include location="../../../clones/qtutils/qtutils/icons/icons.qrc"/>
+ </resources>
+ <connections>
+  <connection>
+   <sender>pushButton_2</sender>
+   <signal>clicked()</signal>
+   <receiver>dialog</receiver>
+   <slot>accept()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>350</x>
+     <y>278</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>395</x>
+     <y>18</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
