--- a/IMAQdxCamera/blacs_tab.ui
+++ b/IMAQdxCamera/blacs_tab.ui
@@ -31,6 +31,20 @@
      <item>
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
+        <widget class="QPushButton" name="pushButton_attributes">
+         <property name="toolTip">
+          <string>View IMAQdx attributes</string>
+         </property>
+         <property name="text">
+          <string>Attributes</string>
+         </property>
+         <property name="icon">
+          <iconset resource="../../../clones/qtutils/qtutils/icons/icons.qrc">
+           <normaloff>:/qtutils/fugue/table-export.png</normaloff>:/qtutils/fugue/table-export.png</iconset>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QPushButton" name="pushButton_snap">
          <property name="toolTip">
           <string>Take a single image</string>
@@ -73,16 +87,58 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_attributes">
-         <property name="toolTip">
-          <string>View IMAQdx attributes</string>
+        <layout class="QHBoxLayout" name="horizontalLayout_3">
+         <property name="topMargin">
+          <number>0</number>
          </property>
+         <item>
+          <widget class="QDoubleSpinBox" name="doubleSpinBox_maxrate">
+           <property name="toolTip">
+            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Maximum frame rate in continuous acquisition mode. Use this to reduce load on the computer during continuous acquisition,otherwise frames are acquired as quickly as possible, which may not be desirable on slower computers.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+           </property>
+           <property name="specialValueText">
+            <string>No max rate</string>
+           </property>
+           <property name="prefix">
+            <string/>
+           </property>
+           <property name="suffix">
+            <string> fps</string>
+           </property>
+           <property name="decimals">
+            <number>1</number>
+           </property>
+           <property name="maximum">
+            <double>9999.000000000000000</double>
+           </property>
+           <property name="value">
+            <double>0.000000000000000</double>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QToolButton" name="toolButton_nomax">
+           <property name="toolTip">
+            <string>No max rate</string>
+           </property>
+           <property name="text">
+            <string>...</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../../../clones/qtutils/qtutils/icons/icons.qrc">
+             <normaloff>:/qtutils/fugue/arrow-turn-180-left.png</normaloff>:/qtutils/fugue/arrow-turn-180-left.png</iconset>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_fps">
          <property name="text">
-          <string>Attributes</string>
+          <string>TextLabel</string>
          </property>
-         <property name="icon">
-          <iconset resource="../../../clones/qtutils/qtutils/icons/icons.qrc">
-           <normaloff>:/qtutils/fugue/table-export.png</normaloff>:/qtutils/fugue/table-export.png</iconset>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
          </property>
         </widget>
        </item>
