--- a/labscript_devices/KeysightScope/STBstatus.ui
+++ b/labscript_devices/KeysightScope/STBstatus.ui
@@ -6,14 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>307</width>
-    <height>218</height>
+    <width>895</width>
+    <height>617</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
+   <item>
+    <widget class="QGroupBox" name="groupBox">
+     <property name="title">
+      <string>GroupBox</string>
+     </property>
+    </widget>
+   </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
@@ -69,7 +76,7 @@
         <string/>
        </property>
        <property name="icon">
-        <iconset resource="../../Anaconda2/envs/labscript/Lib/site-packages/qtutils/icons/icons.qrc">
+        <iconset>
          <normaloff>:/qtutils/fugue/arrow-circle.png</normaloff>:/qtutils/fugue/arrow-circle.png</iconset>
        </property>
        <property name="checkable">
@@ -405,6 +412,9 @@
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Preferred</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
